--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 # --- Required options --- #
 
 # Name of website
-title: Begin
+title: MyFirstWebSite
 
 # Your name to show in the footer
-name: hwi
+name: Kim Sung_Hwi
 
 # --- List of links in the navigation bar --- #
 
@@ -76,7 +76,7 @@ share-links-active:
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"
+url-pretty: "코딩 복습용 블로그"
 
 # Excerpt word length - Truncate the excerpt of each post on the feed page to the specified number of words
 excerpt_length: 50
@@ -185,7 +185,7 @@ date_format: "%B %-d, %Y"
 # --- You don't need to touch anything below here (but you can if you want) --- #
 
 # Output options (more information on Jekyll's site)
-timezone: "America/Toronto"
+timezone: "Korea/seoul"
 markdown: kramdown
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
